# verify-me

./: .gitattributes  .gitignore  LICENSE  NOTICE  README.md  capacitor.config.ts  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.claude/: CLAUDE.md
.github/workflows/: ci.yml
android/: build.gradle  capacitor.settings.gradle  keystore.properties  settings.gradle
android/app/: build.gradle  capacitor.build.gradle
docs/: DEV_NOTES.md
engine/: checkpoint_logger.py  device_manager.py  download_model.py  main.py  pyproject.toml  requirements.txt  test_smoke.py  tts_engine.py  voice_clone.py
engine/models/: __init__.py  pocket_tts.py  qwen3_tts.py
packaging/arch/: PKGBUILD
packaging/flatpak/: com.nicheknack.verifyme.desktop  com.nicheknack.verifyme.dev.yml  com.nicheknack.verifyme.metainfo.xml
scripts/: bundle-python.sh  copy-to-releases.sh  sync-android-models.sh
scripts/onnx-convert/: convert_all.sh  convert_pocket_tts.sh  convert_qwen3.py  (+2 more)
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/models/pocket-tts/: tokenizer.model
src-tauri/resources/models/pocket-tts/embeddings_v2/: azelma.safetensors  cosette.safetensors  fantine.safetensors  marius.safetensors
src-tauri/src/: main.rs
src-tauri/src/commands/: engine.rs  mod.rs  models.rs  recording.rs  tts.rs
src-tauri/src/services/: engine_manager.rs  mod.rs  onnx_engine.rs  path_service.rs  pocket_tts.rs  python_engine.rs  python_resolver.rs  qwen3_tts.rs  tokenizers.rs
(+32 files in other folders)
