[package]
name = "verify-me"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls", "stream", "json"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
thiserror = "2"
cpal = "0.15"
hound = "3.5"
ort = { version = "2.0.0-rc.11", features = ["load-dynamic"] }
ndarray = "0.17"
rand = "0.8"
rustfft = "6"
tokenizers = "0.21"
